in-processing draft

--- a/chapter1-intro.tex
+++ b/chapter1-intro.tex
@@ -1,6 +1,13 @@
 \chapter{Introduction}
 \label{introchap}
 
+% Robin's comments
+    % more structure: subsections, giant block of text.
+    % better argument for your case
+    % the result of the arguments should be the research questions
+    % some alternatives of the research questions
+    %
+
 
 \section{one}
 
@@ -136,6 +143,9 @@ The research questions that we seek to answer are as follows:
 
 
 %%%%% incomplete
+
+
+% This trade-off can have different underlying reasons. firstly, accuracy/personalization is a consumer-centric goal most of the time, and for example provider-side fairness is provider side. due to popularity bias, increasing personalization, might lead to less diversity for providers. and eventually less diversity for the consumers themselves. Achieving different goals at the same time might not be even possible. one other reason is the multi-party settings that recommendations offer, every one is striving to achieve what's best for them, and these goals might be competing. providers want one thing, the consumers want another thing. Therefore it's important to design methods to find a balance between these goals.
 
 
 \subsection{Summary of Contributions}
