--- a/chapter2-fairness.tex
+++ b/chapter2-fairness.tex
@@ -1,7 +1,7 @@
 \chapter{Fairness}
 \label{fairness}
 
-blah blah
+
 
 \section{Fairness \& Justice}
 \section{Fairness in Machine Learning}
@@ -9,3 +9,4 @@ blah blah
 \section{Fairness in Recommender Systems}
 \subsection{Calibration?}
 
+% There has been considerable research in the area of diversity-aware recommendation~\cite{Vargas:2011:RRN:2043932.2043955,adomavicius2012improving} where these systems treat recommendation as a multi-objective optimization problem where the goal is to maintain a certain level of accuracy, while also ensuring that recommendation lists are diverse with respect to some representation of item content. These techniques can be re-purposed for P-fairness recommendation by treating the items from the protected group as a different class and then optimizing for diverse recommendations relative to this definition.
