--- a/chapter5-postprocess.tex
+++ b/chapter5-postprocess.tex
@@ -1,9 +1,9 @@
 \chapter{Fairness through post-processing}
 \label{fairness_postproc}
 
-\section{baseline rerankers}
-\section{A survey of re-rankers} ( adding some overall experiments to compare methods)
-\section{FAR/PFAR}
-\section{OFAIR}
-\section{SCRUF}
-    (provider fairness)
+% \section{baseline rerankers}
+% \section{A survey of re-rankers} ( adding some overall experiments to compare methods)
+% \section{FAR/PFAR}
+% \section{OFAIR}
+% \section{SCRUF}
+%     (provider fairness)
