--- a/refs.bib
+++ b/refs.bib
@@ -5226,7 +5226,7 @@ author={Mehrotra, Rishabh and McInerney, James and Bouchard, Hugues and Lalmas, 
 booktitle={Proceedings of the Conference on Information and Knowledge Management},
 pages={2243--2251},
 year={2018},
-organizatio={ACM},
+organization={ACM},
 }
 
 @inproceedings{buolamwini2018gender,
